# hotpepper_mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  hotpeper_api.md  pyproject.toml
app/: client.py  main.py  models.py
app/googleplace/: client.py  enricher.py
app/tools/: gourmet.py  masters.py  shop.py
tests/: conftest.py  test_client.py  test_googleplace.py  test_tools.py
